--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,7 @@ dependencies:
   - requests
   - shapely
   - cartopy
+  - tqdm
   # river-regulation dependencies
   - dataretrieval
   - jupyterlab
