--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ regulation-experiments/charts/
 george-calibration/cumberland-upstream-subbasins/
 george-calibration/calib_history/*
 *rat-indus/
+regulation-experiments-calibrated-vic/
+regulation-experiments-uncalibrated-vic/
