--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ george-calibration/calib_history/*
 *rat-indus/
 regulation-experiments-calibrated-vic/
 regulation-experiments-uncalibrated-vic/
+notebooks/extras/
