--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,142 +1,99 @@
 affine==2.4.0
-aiofiles==22.1.0
-aiohttp==3.8.6
-aiosignal==1.3.1
-aiosqlite==0.19.0
 altair==5.1.2
 anyio==4.0.0
+archspec==0.2.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens==2.4.0
+asttokens==2.4.1
 async-lru==2.0.4
-async-timeout==4.0.3
 attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
+Babel==2.13.1
 backports.functools-lru-cache==1.6.5
 beautifulsoup4==4.12.2
-black==23.9.1
 bleach==6.1.0
-bmipy==0+unknown
-bokeh==3.3.0
+bokeh==3.2.2
 boltons==23.0.0
-boto3==1.28.78
-botocore==1.31.78
-branca==0.6.0
+branca==0.7.0
 Brotli==1.1.0
 cached-property==1.5.2
-cachetools==5.3.1
 Cartopy==0.22.0
 certifi==2023.7.22
 cffi==1.16.0
-cftime==1.6.2
+cftime==1.6.3
 chardet==5.2.0
-charset-normalizer==3.3.0
+charset-normalizer==3.3.2
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
-cloudpickle==2.2.1
 colorama==0.4.6
 colorcet==3.0.1
 comm==0.1.4
-conda==23.9.0
+conda==23.10.0
 conda-build==3.27.0
-conda_index==0.2.3
+conda_index==0.3.0
+conda-libmamba-solver==23.11.0
 conda-package-handling==2.2.0
 conda_package_streaming==0.9.0
-contourpy==1.1.1
-cryptography==41.0.4
+contourpy==1.2.0
+cryptography==41.0.5
 cycler==0.12.1
-cytoolz==0.12.2
-dask==2023.10.1
-dataretrieval==0.0.0
-datashader==0.16.0
-datashape==0.5.4
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
-distributed==2023.10.1
-earthengine-api==0.1.377
 entrypoints==0.4
-et-xmlfile==1.1.0
 exceptiongroup==1.1.3
-executing==1.2.0
+executing==2.0.1
 fastjsonschema==2.18.1
-filelock==3.12.4
-Fiona==1.9.4
-folium==0.14.0
-fonttools==4.43.1
+filelock==3.13.1
+fiona==1.9.5
+folium==0.15.0
+fonttools==4.44.0
 fqdn==1.5.1
-frozenlist==1.4.0
-fsspec==2023.9.2
-GDAL==3.7.2
-gdown==4.7.1
+GDAL==3.7.3
 geographiclib==2.0
 geonetworkx==0.5.3
 geopandas==0.14.0
 geopy==2.4.0
-geoviews==1.11.0
+geoviews==1.5.0
 ghp-import==2.1.0
-google-api-core==2.12.0
-google-api-python-client==2.102.0
-google-auth==2.23.2
-google-auth-httplib2==0.1.1
-google-cloud-core==2.3.3
-google-cloud-storage==2.11.0
-google-crc32c==1.1.2
-google-resumable-media==2.6.0
-googleapis-common-protos==1.60.0
-grpcio==1.58.1
-h11==0.14.0
 holoviews==1.18.0
-httplib2==0.22.0
 hvplot==0.9.0
-HydroErr==1.24
-hydrostats==0.78
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.1.0
-ipykernel==6.25.2
-ipython==8.16.1
-ipython-genutils==0.2.0
+ipykernel==6.26.0
+ipython==8.17.2
 ipywidgets==8.1.1
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.2
-jmespath==1.0.1
 joblib==1.3.2
 json5==0.9.14
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.19.1
+jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 jupyter==1.0.0
-jupyter-bokeh==3.0.7
-jupyter_client==8.3.1
+jupyter-bokeh==2.0.4
+jupyter_client==8.6.0
 jupyter-console==6.6.3
-jupyter_core==5.3.2
-jupyter-events==0.7.0
+jupyter_core==5.5.0
+jupyter-events==0.9.0
 jupyter-lsp==2.2.0
-jupyter_server==2.7.3
-jupyter_server_fileid==0.9.0
+jupyter_server==2.10.0
 jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.8.0
-jupyter-ydoc==0.2.4
-jupyterlab==3.6.6
+jupyterlab==4.0.8
 jupyterlab-pygments==0.2.2
 jupyterlab_server==2.25.0
 jupyterlab-widgets==3.0.9
 jupytext==1.15.2
 kiwisolver==1.4.5
-landlab==2.7.0
 libarchive-c==5.0
+libmambapy==1.5.3
 linkify-it-py==2.0.0
-llvmlite==0.40.1
-locket==1.0.0
-lz4==4.3.2
 mapclassify==2.6.1
-Markdown==3.5
+Markdown==3.5.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.1
@@ -144,67 +101,55 @@ matplotlib-inline==0.1.6
 mdit-py-plugins==0.4.0
 mdurl==0.1.0
 mergedeep==1.3.4
-mistune==3.0.1
+mistune==3.0.2
 mkdocs==1.5.3
 mkdocs-jupyter==0.24.6
 mkdocs-material==9.4.8
 mkdocs-material-extensions==1.3
 more-itertools==10.1.0
-msgpack==1.0.6
-multidict==6.0.4
-multipledispatch==0.6.0
 munch==4.0.0
 munkres==1.1.4
-mypy-extensions==1.0.0
-nbclassic==1.0.0
 nbclient==0.8.0
-nbconvert==7.9.2
+nbconvert==7.11.0
 nbformat==5.9.2
-nest-asyncio==1.5.6
+nest-asyncio==1.5.8
 netCDF4==1.6.5
-networkx==3.1
+networkx==3.2.1
 nose==1.3.7
-notebook==6.5.4
+notebook==7.0.6
 notebook_shim==0.2.3
-numba==0.57.1
-numpy==1.24.4
-openpyxl==3.1.2
-outcome==1.3.0
+numpy==1.26.0
 overrides==7.4.0
 packaging==23.2
 paginate==0.5.6
 pandas==2.1.2
 pandocfilters==1.5.0
-panel==1.3.1
-param==2.0.0
+panel==1.2.3
+param==1.13.0
 parso==0.8.3
-partd==1.4.1
 pathspec==0.11.2
-patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.0.1
+Pillow==10.1.0
 pip==23.3.1
 pkginfo==1.9.6
 pkgutil_resolve_name==1.3.10
 platformdirs==3.11.0
 pluggy==1.3.0
 ply==3.11
-prometheus-client==0.17.1
+prometheus-client==0.18.0
 prompt-toolkit==3.0.39
-protobuf==4.24.3
+protobuf==4.24.4
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==13.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
 pycosat==0.6.6
 pycparser==2.21
 pyct==0.4.6
 Pygments==2.16.1
 pymdown-extensions==10.3.1
-pyOpenSSL==23.2.0
+pyOpenSSL==23.3.0
 pyparsing==3.1.1
 pyproj==3.6.1
 PyQt5==5.15.9
@@ -214,45 +159,34 @@ PySocks==1.7.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
-pyu2f==0.1.5
-pyviz-comms==2.3.2
+pyviz_comms==3.0.0
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
 pyzmq==25.1.1
-qtconsole==5.4.4
-QtPy==2.4.0
+qtconsole==5.5.0
+QtPy==2.4.1
 rasterio==1.3.9
 referencing==0.30.2
 regex==2022.10.31
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.6.0
-rich-click==1.6.1
-richdem==2.3.0
 rioxarray==0.15.0
-rpds-py==0.10.4
-rsa==4.9
-Rtree==1.0.1
-ruamel.yaml==0.17.35
+rpds-py==0.12.0
+Rtree==1.1.0
+ruamel.yaml==0.17.40
 ruamel.yaml.clib==0.2.7
-ruamel-yaml-conda==0.15.80
-s3transfer==0.7.0
 scikit-learn==1.3.2
 scipy==1.11.3
-selenium==4.15.1
 Send2Trash==1.8.2
 setuptools==68.2.2
-shapely==2.0.1
-sip==6.7.11
+shapely==2.0.2
+sip==6.7.12
 six==1.16.0
 sniffio==1.3.0
 snuggs==1.4.7
-sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.6.2
-statsmodels==0.14.0
-tblib==2.0.0
 terminado==0.17.1
 threadpoolctl==3.2.0
 tinycss2==1.2.1
@@ -261,9 +195,7 @@ tomli==2.0.1
 toolz==0.12.0
 tornado==6.3.3
 tqdm==4.66.1
-traitlets==5.9.0
-trio==0.22.2
-trio-websocket==0.11.1
+traitlets==5.13.0
 truststore==0.8.0
 types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
@@ -271,24 +203,18 @@ typing-utils==0.1.0
 tzdata==2023.3
 uc-micro-py==1.0.1
 uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.17
+urllib3==2.0.7
 vegafusion==1.4.2
 vegafusion-python-embed==1.4.2
 vl-convert-python==1.0.1
 watchdog==3.0.0
-wcwidth==0.2.8
+wcwidth==0.2.9
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.4
-wheel==0.41.2
+wheel==0.41.3
 widgetsnbextension==4.0.9
-wsproto==1.2.0
 xarray==2023.10.1
-xyzservices==2023.10.0
-y-py==0.5.9
-yarl==1.9.2
-ypy-websocket==0.8.2
-zict==3.0.0
+xyzservices==2023.10.1
 zipp==3.17.0
-zstandard==0.21.0
+zstandard==0.22.0
