--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,74 @@
-mkdocs==1.4.2
-mkdocs-markdownextradata-plugin==0.2.5
-mkdocs-material==9.1.4
-mkdocs-material-extensions==1.1.1
-mkdocs-rtd-dropdown==1.0.2
+attrs==23.1.0
+Babel==2.13.1
+beautifulsoup4==4.12.2
+bleach==6.1.0
+Brotli==1.1.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cssselect==1.2.0
+defusedxml==0.7.1
+entrypoints==0.4
+fastjsonschema==2.18.1
+ghp-import==2.1.0
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+Jinja2==3.1.2
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyterlab-pygments==0.2.2
+jupytext==1.15.2
+lxml==4.9.3
+Markdown==3.5.1
+markdown-it-py==3.0.0
+markdown2==2.4.10
+MarkupSafe==2.1.3
+mdit-py-plugins==0.4.0
+mdurl==0.1.0
+mergedeep==1.3.4
+mistune==3.0.2
+mkdocs==1.5.3
+mkdocs-jupyter==0.24.6
+mkdocs-material==9.3.1
+mkdocs-material-extensions==1.3
+nbclient==0.8.0
+nbconvert==7.11.0
+nbformat==5.9.2
+packaging==23.2
+paginate==0.5.6
+pandocfilters==1.5.0
+pathspec==0.11.2
+pip==23.3.1
+pkgutil_resolve_name==1.3.10
+platformdirs==3.11.0
+Pygments==2.16.1
+pymdown-extensions==10.3.1
+pyquery==2.0.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
+pyzmq==25.1.1
+readtime==3.0.0
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+rpds-py==0.12.0
+setuptools==68.2.2
+six==1.16.0
+soupsieve==2.5
+tinycss2==1.2.1
+toml==0.10.2
+tornado==6.3.3
+traitlets==5.13.0
+typing_extensions==4.8.0
+urllib3==2.0.7
+watchdog==3.0.0
+webencodings==0.5.1
+wheel==0.41.3
+zipp==3.17.0
