--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ george-calibration/calib_history/*
 regulation-experiments-calibrated-vic/
 regulation-experiments-uncalibrated-vic/
 notebooks/extras/
+.DS_Store
