--- a/environment.yml
+++ b/environment.yml
@@ -7,44 +7,12 @@ dependencies:
   - numpy
   - xarray
   - rasterio
-  - yaml
-  - pyyaml
-  - earthengine-api
-  - netcdf4
-  - scikit-learn
-  - scipy
-  - ruamel_yaml
   - rioxarray
+  - netcdf4
   - dask
-  - requests
-  - tqdm
-  # river-regulation dependencies
-  - dataretrieval
-  - jupyterlab
   - geopandas
   - cartopy
-  - landlab
-  - ipywidgets
-  - openpyxl
-  # precip-analysis dependencies
-  - Boto3
-  # calibration dependencies
-  - hydrostats
-  # visualization dependencies
-  - matplotlib
-  - geoviews
-  - holoviews
-  - bokeh
-  - jupyter_bokeh
-  - hvplot
-  - panel
-  - param
-  - selenium
-  - altair
-  - vl-convert-python
-  - vegafusion-python-embed>=1.4.0
-  - vegafusion>=1.4.0
-  # development
+  - pytest
   - conda-build
   - pip:
     - geonetworkx
