--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,3 +15,12 @@ plugins:
   - mkdocs-jupyter:
       include: ["*.ipynb"]
       execute: false
+
+markdown_extensions:
+  - pymdownx.arithmatex:
+    generic: true
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
